--- a/src/classes/_hu-padding.scss
+++ b/src/classes/_hu-padding.scss
@@ -5,7 +5,7 @@ $hu-padding-parents: hu-get-class-modules($hu-padding-modules, parents, null);
 @each $module in hu-format-modules($hu-padding-core-modules) {
   @each $scale, $value in $hu-padding-scale {
     @each $type, $properties in $hu-padding-types {
-      $class-name: hu-class-name(#{$type}-#{$scale});
+      $class-name: hu-class-name("#{$type}-#{$scale}");
 
       @include hu-generic($class-name, $module) {
         @each $property in $properties {
@@ -21,7 +21,7 @@ $hu-padding-parents: hu-get-class-modules($hu-padding-modules, parents, null);
     @include hu-media-query($mq-value) {
       @each $scale, $value in $hu-padding-scale {
         @each $type, $properties in $hu-padding-types {
-          $class-name: hu-class-name(#{$type}-#{$scale});
+          $class-name: hu-class-name("#{$type}-#{$scale}");
 
           @include hu-responsive($class-name, $hu-padding-core-modules, $mq-scale) {
             @each $property in $properties {
@@ -38,7 +38,7 @@ $hu-padding-parents: hu-get-class-modules($hu-padding-modules, parents, null);
   @each $module in hu-format-modules($hu-padding-core-modules) {
     @each $scale, $value in $hu-padding-scale {
       @each $type, $properties in $hu-padding-types {
-        $class-name: hu-class-name(#{$type}-#{$scale});
+        $class-name: hu-class-name("#{$type}-#{$scale}");
 
         @include hu-pseudo($class-name, $hu-padding-pseudos, $module) {
           @each $property in $properties {
@@ -54,7 +54,7 @@ $hu-padding-parents: hu-get-class-modules($hu-padding-modules, parents, null);
       @include hu-media-query($mq-value) {
         @each $scale, $value in $hu-padding-scale {
           @each $type, $properties in $hu-padding-types {
-            $class-name: hu-class-name(#{$type}-#{$scale});
+            $class-name: hu-class-name("#{$type}-#{$scale}");
 
             @include hu-pseudo-responsive($class-name, $hu-padding-pseudos, $hu-padding-core-modules, $mq-scale) {
               @each $property in $properties {
@@ -72,7 +72,7 @@ $hu-padding-parents: hu-get-class-modules($hu-padding-modules, parents, null);
   @each $module in hu-format-modules($hu-padding-core-modules) {
     @each $scale, $value in $hu-padding-scale {
       @each $type, $properties in $hu-padding-types {
-        $class-name: hu-class-name(#{$type}-#{$scale});
+        $class-name: hu-class-name("#{$type}-#{$scale}");
 
         @include hu-parent($class-name, $hu-padding-parents, $module) {
           @each $property in $properties {
@@ -88,7 +88,7 @@ $hu-padding-parents: hu-get-class-modules($hu-padding-modules, parents, null);
       @include hu-media-query($mq-value) {
         @each $scale, $value in $hu-padding-scale {
           @each $type, $properties in $hu-padding-types {
-            $class-name: hu-class-name(#{$type}-#{$scale});
+            $class-name: hu-class-name("#{$type}-#{$scale}");
 
             @include hu-parent-responsive($class-name, $hu-padding-parents, $hu-padding-core-modules, $mq-scale) {
               @each $property in $properties {
