--- a/src/mixins/_hu-responsive-classes.scss
+++ b/src/mixins/_hu-responsive-classes.scss
@@ -9,7 +9,7 @@
       @include hu-media-query($mq-value) {
         @if ($types) {
           @each $type, $value in $types {
-            $class-name: hu-class-name(#{$class-name-property}-#{$type});
+            $class-name: hu-class-name("#{$class-name-property}-#{$type}");
             $value: if($value, $value, $type);
 
             @include hu-responsive($class-name, $modules, $mq-scale) {
