text-decoration should use hocus module by default

--- a/src/variables/classes/_hu-text-decoration.scss
+++ b/src/variables/classes/_hu-text-decoration.scss
@@ -1,4 +1,4 @@
-$hu-text-decoration-modules: (base) !default;
+$hu-text-decoration-modules: (base, hocus) !default;
 
 $hu-text-decoration-types: (
   line-through,
