--- a/src/variables/classes/_hu-margin.scss
+++ b/src/variables/classes/_hu-margin.scss
@@ -4,10 +4,10 @@ $hu-margin-scale: $hu-spacing-scale !default;
 
 $hu-margin-types: (
   margin: margin,
-  margin-b: margin-bottom,
-  margin-l: margin-left,
-  margin-r: margin-right,
-  margin-t: margin-top,
-  margin-h: (margin-left, margin-right),
-  margin-v: (margin-bottom, margin-top),
+  margin-bottom: margin-bottom,
+  margin-left: margin-left,
+  margin-right: margin-right,
+  margin-top: margin-top,
+  margin-horizontal: (margin-left, margin-right),
+  margin-vertical: (margin-bottom, margin-top),
 ) !default;
