--- a/src/classes/_hu-scale.scss
+++ b/src/classes/_hu-scale.scss
@@ -5,7 +5,7 @@ $hu-scale-parents: hu-get-class-modules($hu-scale-modules, parents, null);
 
 @each $module in hu-format-modules($hu-scale-core-modules) {
   @each $type, $value in $hu-scale-types {
-    $class-name: hu-class-name(scale-#{$type});
+    $class-name: hu-class-name("scale-#{$type}");
     $property: transform;
     $value: if($value, $value, $type);
 
@@ -19,7 +19,7 @@ $hu-scale-parents: hu-get-class-modules($hu-scale-modules, parents, null);
   @each $mq-scale, $mq-value in $hu-media-queries {
     @include hu-media-query($mq-value) {
       @each $type, $value in $hu-scale-types {
-        $class-name: hu-class-name(scale-#{$type});
+        $class-name: hu-class-name("scale-#{$type}");
         $property: scale;
         $value: if($value, $value, $type);
 
@@ -34,7 +34,7 @@ $hu-scale-parents: hu-get-class-modules($hu-scale-modules, parents, null);
 @if ($hu-scale-pseudos) {
   @each $module in hu-format-modules($hu-scale-core-modules) {
     @each $type, $value in $hu-scale-types {
-      $class-name: hu-class-name(scale-#{$type});
+      $class-name: hu-class-name("scale-#{$type}");
       $property: transform;
       $value: if($value, $value, $type);
 
@@ -48,7 +48,7 @@ $hu-scale-parents: hu-get-class-modules($hu-scale-modules, parents, null);
     @each $mq-scale, $mq-value in $hu-media-queries {
       @include hu-media-query($mq-value) {
         @each $type, $value in $hu-scale-types {
-          $class-name: hu-class-name(scale-#{$type});
+          $class-name: hu-class-name("scale-#{$type}");
           $property: scale;
           $value: if($value, $value, $type);
 
@@ -64,7 +64,7 @@ $hu-scale-parents: hu-get-class-modules($hu-scale-modules, parents, null);
 @if ($hu-scale-parents) {
   @each $module in hu-format-modules($hu-scale-core-modules) {
     @each $type, $value in $hu-scale-types {
-      $class-name: hu-class-name(scale-#{$type});
+      $class-name: hu-class-name("scale-#{$type}");
       $property: transform;
       $value: if($value, $value, $type);
 
@@ -78,7 +78,7 @@ $hu-scale-parents: hu-get-class-modules($hu-scale-modules, parents, null);
     @each $mq-scale, $mq-value in $hu-media-queries {
       @include hu-media-query($mq-value) {
         @each $type, $value in $hu-scale-types {
-          $class-name: hu-class-name(scale-#{$type});
+          $class-name: hu-class-name("scale-#{$type}");
           $property: scale;
           $value: if($value, $value, $type);
 
